--- a/src/main/resources/templates/indextest.html
+++ b/src/main/resources/templates/indextest.html
@@ -7,7 +7,7 @@
 <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 <head>
     <title th:text="#{message.title}"></title>
-    <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/images/favicon.ico}"/>
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{images/favicon.ico}"/>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -21,64 +21,15 @@
         <div class="card">
             <div class="card-header">
                 <h3 id="index-header" class="text-center"
-                    th:text="#{message.index-page.header}+', '+${user.firstname}+'!'">
+                    th:text="#{message.index-page.header}+', '+${user.firstName}+'!'">
                     Welcome</h3>
             </div>
             <div class="card-body">
                 <a th:href="@{/request/new}" class="btn btn-success float-right"
                    th:text="#{message.hotel.new-request}">New request</a>
-                <div th:if="${processedRequestList.isEmpty()==false}">
-                    <p class="white" th:text="#{message.index-page.processed-requests}"> Processed requests:</p>
-                    <table class="table table-bordered white">
-                        <thead>
-                        <tr>
-                            <th scope="col" th:text="#{message.hotel.capacity}">Capacity</th>
-                            <th scope="col" th:text="#{message.hotel.class}">Class</th>
-                            <th scope="col" th:text="#{message.hotel.checkin}">Check in</th>
-                            <th scope="col" th:text="#{message.hotel.checkout}">Check out</th>
-                            <th scope="col" th:text="#{message.view}">View room</th>
-                            <th scope="col" th:text="#{message.hotel.status}">Status</th>
-                            <th scope="col" th:text="#{message.cancel}">Cancel</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <th:block th:each="request : ${processedRequestList}">
-                            <tr>
-                                <td th:text="#{'message.capacity.'+${request.capacity}}"></td>
-                                <td th:text="#{'message.class.'+${request.classID}}"></td>
-                                <td th:text="${request.checkIn}"></td>
-                                <td th:text="${request.checkOut}"></td>
-                                <td>
-                                    <a th:text="#{message.view}"
-                                       th:href="@{'/reservation/view/'+${request.reservationID}}"
-                                       class="btn btn-info float-left">view</a>
-                                </td>
-                                <td th:text="#{'message.status.'+${request.paymentStatus}}"></td>
-                                <td>
-                                    <a th:href="@{'/reservation/cancel/'+${request.reservationID}}"
-                                       th:text="#{message.cancel}"
-                                       class="btn btn-danger float-left">cancel</a>
-                                </td>
-                            </tr>
-                        </th:block>
-                        </tbody>
-                    </table>
-                    <div th:if="${processedRequestPages.size() > 1}" class="pagination">
-                        <a th:each="pageNumber : ${processedRequestPages}"
-                           th:href="@{'/index?pr_page='+${pageNumber}+'&ur_page='+${currentUrPage}}"
-                           class="btn btn-grey-small" th:text="${pageNumber}">Number</a>
-                    </div>
-                </div>
 
-                <p class="white"
-                   th:if="${processedRequestList.isEmpty()==false && unprocessedRequestList.isEmpty()==true}"
-                   th:text="#{message.index-page.no-unprocessed-request}">You
-                    have not unprocessed requests.</p>
-                <p class="white"
-                   th:if="${processedRequestList.isEmpty()==true && unprocessedRequestList.isEmpty()==true}"
-                   th:text="#{message.index-page.no-request}">You
-                    have not requests.</p>
-                <div th:if="${unprocessedRequestList.isEmpty()==false}">
+
+                <div>
                     <p class="white" th:text="#{message.index-page.your-requests}"> Your requests</p>
                     <table class="table table-bordered white">
                         <thead>
@@ -92,19 +43,19 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <th:block th:each="request : ${unprocessedRequestList}">
+                        <th:block th:each="request : ${user.requests}">
                             <tr>
                                 <td th:text="#{'message.capacity.'+${request.capacity}}"></td>
                                 <td th:text="#{'message.class.'+${request.classID}}"></td>
                                 <td th:text="${request.checkIn}"></td>
                                 <td th:text="${request.checkOut}"></td>
                                 <td>
-                                    <a th:href="@{'/request/edit/'+${request.requestID}}"
+                                    <a th:href="@{'/request/edit/'+${request.id}}"
                                        th:text="#{message.edit}"
                                        class="btn btn-info float-left">Edit</a>
                                 </td>
                                 <td>
-                                    <a th:href="@{'/request/delete/'+${request.requestID}}"
+                                    <a th:href="@{'/request/delete/'+${request.id}}"
                                        th:text="#{message.delete}"
                                        class="btn btn-danger float-left">Delete</a>
                                 </td>
@@ -112,11 +63,7 @@
                         </th:block>
                         </tbody>
                     </table>
-                    <div th:if="${unprocessedRequestPages.size() > 1}" class="pagination">
-                        <a th:each="pageNumber : ${unprocessedRequestPages}"
-                           th:href="@{'/index?pr_page='+${currentPrPage}+'&ur_page='+${pageNumber}}"
-                           class="btn btn-grey-small" th:text="${pageNumber}">Number</a>
-                    </div>
+
                 </div>
                 <div class="roomsbutton">
                     <a th:href="@{/rooms}" class="btn btn-info float-right"
@@ -145,7 +92,7 @@
 </div>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script th:src="@{static/js/hotel.js}"></script>
+<script th:src="@{js/hotel.js}"></script>
 
 
 </body>
