--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -3,13 +3,13 @@
 <meta charset="UTF-8">
 <head>
     <title th:text="#{message.title}"></title>
-    <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/images/favicon.ico}"/>
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{../images/favicon.ico}"/>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" th:href="@{/resources/css/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{../css/style.css}">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 </head>
 <body>
@@ -55,7 +55,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-calendar-alt"></i> </span>
                         </div>
-                        <input id="checkIn" autocomplete="off" name="checkin" class="form-control datepicker"
+                        <input id="checkIn" name="checkIn" autocomplete="off" class="form-control datepicker"
                                placeholder="Check in" type="text"
                                th:field="*{checkIn}">
                         <p hidden id="checkIn-error" class="error text-center"
@@ -64,11 +64,11 @@
 
 
                     <p class="white" th:text="#{message.request-page.select.checkout}">Select check out date:</p>
-                    <div id="checkout" class="form-group input-group">
+                    <div id="checkoutdiv" class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-calendar-alt"></i> </span>
                         </div>
-                        <input id="checkOut" autocomplete="off" name="checkout" class="form-control datepicker"
+                        <input id="checkOut" name="checkOut" autocomplete="off" class="form-control datepicker"
                                placeholder="Check out" type="text"
                                th:field="*{checkOut}">
                         <p hidden id="checkOut-error" class="error text-center"
@@ -76,12 +76,12 @@
                     </div>
 
 
-                    <input hidden class="form-control" type="text" th:field="*{requestID}"/>
-                    <input hidden class="form-control" type="text" th:field="*{userID}"/>
+                    <input hidden class="form-control" type="text" th:field="*{id}"/>
                     <input hidden class="form-control" type="text" th:field="*{paymentStatus}"/>
 
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block" th:text="#{'message.'+${buttonName}}"></button>
+                        <button type="submit" class="btn btn-primary btn-block"
+                                th:text="#{'message.'+${buttonName}}"></button>
                     </div>
                 </form>
                 <div class="center-align">
@@ -101,6 +101,6 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script th:src="@{/resources/js/hotel.js}"></script>
+<script th:src="@{../js/hotel.js}"></script>
 </body>
 </html>
