--- a/src/main/resources/templates/indextest.html
+++ b/src/main/resources/templates/indextest.html
@@ -7,13 +7,13 @@
 <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 <head>
     <title th:text="#{message.title}"></title>
-    <link rel="shortcut icon" type="image/x-icon" th:href="@{images/favicon.ico}"/>
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" th:href="@{css/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
 <body>
 <div class="container">
@@ -47,8 +47,8 @@
                             <tr>
                                 <td th:text="#{'message.capacity.'+${request.capacity}}"></td>
                                 <td th:text="#{'message.class.'+${request.classID}}"></td>
-                                <td th:text="${request.checkIn}"></td>
-                                <td th:text="${request.checkOut}"></td>
+                                <td th:text="${#dates.format(request.checkIn,'MM/dd/yyyy')}"></td>
+                                <td th:text="${#dates.format(request.checkOut,'MM/dd/yyyy')}"></td>
                                 <td>
                                     <a th:href="@{'/request/edit/'+${request.id}}"
                                        th:text="#{message.edit}"
@@ -92,7 +92,7 @@
 </div>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script th:src="@{js/hotel.js}"></script>
+<script th:src="@{/js/hotel.js}"></script>
 
 
 </body>
