--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,13 +7,13 @@
 <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 <head>
     <title th:text="#{message.title}"></title>
-    <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/images/favicon.ico}"/>
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" th:href="@{css/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
 <body>
 <div class="container">
@@ -21,13 +21,13 @@
         <div class="card">
             <div class="card-header">
                 <h3 id="index-header" class="text-center"
-                    th:text="#{message.index-page.header}+', '+${user.firstname}+'!'">
+                    th:text="#{message.index-page.header}+', '+${user.firstName}+'!'">
                     Welcome</h3>
             </div>
             <div class="card-body">
                 <a th:href="@{/request/new}" class="btn btn-success float-right"
                    th:text="#{message.hotel.new-request}">New request</a>
-                <div th:if="${processedRequestList.isEmpty()==false}">
+                <div th:if="${processedRequests.hasContent()}">
                     <p class="white" th:text="#{message.index-page.processed-requests}"> Processed requests:</p>
                     <table class="table table-bordered white">
                         <thead>
@@ -42,20 +42,20 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <th:block th:each="request : ${processedRequestList}">
+                        <th:block th:each="request : ${processedRequests}">
                             <tr>
                                 <td th:text="#{'message.capacity.'+${request.capacity}}"></td>
                                 <td th:text="#{'message.class.'+${request.classID}}"></td>
-                                <td th:text="${request.checkIn}"></td>
-                                <td th:text="${request.checkOut}"></td>
+                                <td th:text="${#dates.format(request.checkIn,'MM/dd/yyyy')}"></td>
+                                <td th:text="${#dates.format(request.checkOut,'MM/dd/yyyy')}"></td>
                                 <td>
                                     <a th:text="#{message.view}"
-                                       th:href="@{'/reservation/view/'+${request.reservationID}}"
+                                       th:href="@{'/reservation/view/'+${request.id}}"
                                        class="btn btn-info float-left">view</a>
                                 </td>
                                 <td th:text="#{'message.status.'+${request.paymentStatus}}"></td>
                                 <td>
-                                    <a th:href="@{'/reservation/cancel/'+${request.reservationID}}"
+                                    <a th:href="@{'/reservation/cancel/'+${request.id}}"
                                        th:text="#{message.cancel}"
                                        class="btn btn-danger float-left">cancel</a>
                                 </td>
@@ -63,22 +63,38 @@
                         </th:block>
                         </tbody>
                     </table>
-                    <div th:if="${processedRequestPages.size() > 1}" class="pagination">
-                        <a th:each="pageNumber : ${processedRequestPages}"
-                           th:href="@{'/index?pr_page='+${pageNumber}+'&ur_page='+${currentUrPage}}"
-                           class="btn btn-grey-small" th:text="${pageNumber}">Number</a>
-                    </div>
+                    <nav th:if="${processedRequests.totalPages > 0}">
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item" th:classappend="${processedRequests.isFirst()} ? disabled">
+                                <a class="page-link"
+                                   th:href="@{/index(pr_page=${processedRequests.number},ur_page=${unprocessedRequests.number}+1)}"
+                                   tabindex="-1"><<
+                                </a>
+                            </li>
+                            <li th:each="pageNumber : ${processedPageNumbers}" class="page-item"
+                                th:classappend="${pageNumber==processedRequests.number + 1} ? disabled">
+                                <a class="page-link"
+                                   th:href="@{/index(pr_page=${pageNumber},ur_page=${unprocessedRequests.number}+1)}"
+                                   th:text="${pageNumber}">
+                                </a>
+                            </li>
+                            <li class="page-item" th:classappend="${processedRequests.isLast()} ? disabled">
+                                <a class="page-link"
+                                   th:href="@{/index(pr_page=${processedRequests.number}+2,ur_page=${unprocessedRequests.number}+1)}"
+                                >>>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
 
                 <p class="white"
-                   th:if="${processedRequestList.isEmpty()==false && unprocessedRequestList.isEmpty()==true}"
-                   th:text="#{message.index-page.no-unprocessed-request}">You
-                    have not unprocessed requests.</p>
+                   th:if="${processedRequests.hasContent()==false && unprocessedRequests.hasContent()}"
+                   th:text="#{message.index-page.no-unprocessed-request}">no unprocessed</p>
                 <p class="white"
-                   th:if="${processedRequestList.isEmpty()==true && unprocessedRequestList.isEmpty()==true}"
-                   th:text="#{message.index-page.no-request}">You
-                    have not requests.</p>
-                <div th:if="${unprocessedRequestList.isEmpty()==false}">
+                   th:unless="${processedRequests.hasContent() || unprocessedRequests.hasContent()}"
+                   th:text="#{message.index-page.no-request}">no requests</p>
+                <div th:if="${unprocessedRequests.hasContent()}">
                     <p class="white" th:text="#{message.index-page.your-requests}"> Your requests</p>
                     <table class="table table-bordered white">
                         <thead>
@@ -92,19 +108,19 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <th:block th:each="request : ${unprocessedRequestList}">
+                        <th:block th:each="request : ${unprocessedRequests.content}">
                             <tr>
                                 <td th:text="#{'message.capacity.'+${request.capacity}}"></td>
                                 <td th:text="#{'message.class.'+${request.classID}}"></td>
-                                <td th:text="${request.checkIn}"></td>
-                                <td th:text="${request.checkOut}"></td>
+                                <td th:text="${#dates.format(request.checkIn,'MM/dd/yyyy')}"></td>
+                                <td th:text="${#dates.format(request.checkOut,'MM/dd/yyyy')}"></td>
                                 <td>
-                                    <a th:href="@{'/request/edit/'+${request.requestID}}"
+                                    <a th:href="@{'/request/edit/'+${request.id}}"
                                        th:text="#{message.edit}"
                                        class="btn btn-info float-left">Edit</a>
                                 </td>
                                 <td>
-                                    <a th:href="@{'/request/delete/'+${request.requestID}}"
+                                    <a th:href="@{'/request/delete/'+${request.id}}"
                                        th:text="#{message.delete}"
                                        class="btn btn-danger float-left">Delete</a>
                                 </td>
@@ -112,11 +128,29 @@
                         </th:block>
                         </tbody>
                     </table>
-                    <div th:if="${unprocessedRequestPages.size() > 1}" class="pagination">
-                        <a th:each="pageNumber : ${unprocessedRequestPages}"
-                           th:href="@{'/index?pr_page='+${currentPrPage}+'&ur_page='+${pageNumber}}"
-                           class="btn btn-grey-small" th:text="${pageNumber}">Number</a>
-                    </div>
+                    <nav th:if="${unprocessedRequests.totalPages > 0}">
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item" th:classappend="${unprocessedRequests.isFirst()} ? disabled">
+                                <a class="page-link"
+                                   th:href="@{/index(ur_page=${unprocessedRequests.number},pr_page=${processedRequests.number}+1)}"
+                                   tabindex="-1"><<
+                                </a>
+                            </li>
+                            <li th:each="pageNumber : ${unprocessedPageNumbers}" class="page-item"
+                                th:classappend="${pageNumber==unprocessedRequests.number + 1} ? disabled">
+                                <a class="page-link"
+                                   th:href="@{/index(ur_page=${pageNumber},pr_page=${processedRequests.number}+1)}"
+                                   th:text="${pageNumber}">
+                                </a>
+                            </li>
+                            <li class="page-item" th:classappend="${unprocessedRequests.isLast()} ? disabled">
+                                <a class="page-link"
+                                   th:href="@{/index(ur_page=${unprocessedRequests.number}+2,pr_page=${processedRequests.number}+1)}"
+                                >>>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
                 <div class="roomsbutton">
                     <a th:href="@{/rooms}" class="btn btn-info float-right"
@@ -145,8 +179,6 @@
 </div>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script th:src="@{static/js/hotel.js}"></script>
-
-
+<script th:src="@{/js/hotel.js}"></script>
 </body>
 </html>
