--- a/src/main/resources/templates/view-request.html
+++ b/src/main/resources/templates/view-request.html
@@ -6,21 +6,21 @@
 <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 <head>
     <title th:text="#{message.title}"></title>
-    <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/images/favicon.ico}"/>
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" th:href="@{/resources/css/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
 <body>
 <div hidden id="payment" class="warning-msg-bg">
     <div class="warning-msg">
-        <h3 class="text-center" th:text="#{message.viewreservation-page.confirm-message}">confirm-message</h3>
+        <h3 class="text-center" th:text="#{message.view-request.confirm-message}">confirm-message</h3>
         <a id="pay-confirm" class="btn btn-success float-left"
-           th:text="#{message.pay}+': $'+${request.price}"
-           th:href="@{'/request/pay/'+${request.requestID}}">pay</a>
+           th:text="#{message.pay}+': $'+${request.id}"
+           th:href="@{'/request/pay/'+${request.id}}">pay</a>
 
         <a id="pay-cancel" onclick="showPaymentMessage(false)" class="btn btn-danger float-right"
            th:text="#{message.cancel}">cancel</a>
@@ -31,11 +31,11 @@
         <div class="card">
             <div class="card-header">
                 <h3 id="index-header" class="text-center"
-                    th:text="#{message.viewreservation-page.header}">
+                    th:text="#{message.view-request.header}">
                     View reservedRoom</h3>
             </div>
             <div class="card-body">
-                <p class="white" th:text="#{message.viewreservation-page.your-request}">Your request</p>
+                <p class="white" th:text="#{message.view-request.your-request}">Your request</p>
                 <table class="table table-bordered white">
                     <thead>
                     <tr>
@@ -49,13 +49,13 @@
                     <tr>
                         <td th:text="#{'message.capacity.'+${request.capacity}}"></td>
                         <td th:text="#{'message.class.'+${request.classID}}"></td>
-                        <td th:text="${request.checkIn}"></td>
-                        <td th:text="${request.checkOut}"></td>
+                        <td th:text="${#dates.format(request.checkIn,'MM/dd/yyyy')}"></td>
+                        <td th:text="${#dates.format(request.checkOut,'MM/dd/yyyy')}"></td>
                     </tr>
                     </tbody>
                 </table>
 
-                <p class="white" th:text="#{message.viewreservation-page.proposed-room}"> proposed-room</p>
+                <p class="white" th:text="#{message.view-request.proposed-room}"> proposed-room</p>
                 <table class="table table-bordered white">
                     <thead>
                     <tr>
@@ -67,19 +67,19 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td th:text="${room.roomNumber}"></td>
-                        <td th:text="#{'message.capacity.'+${room.capacity}}"></td>
-                        <td th:text="#{'message.class.'+${room.classID}}"></td>
+                        <td th:text="${request.room.number}"></td>
+                        <td th:text="#{'message.capacity.'+${request.room.capacity}}"></td>
+                        <td th:text="#{'message.class.'+${request.room.classID}}"></td>
                         <td th:text="#{'message.status.'+${request.paymentStatus}}"></td>
                     </tr>
                     </tbody>
                 </table>
-                <div class="reserv-buttons" th:if="${request.paymentStatus=='BILLSENT'}">
-                    <a th:href="@{'/reservation/cancel/'+${request.reservationID}}"
+                <div class="reserv-buttons" th:if="${request.paymentStatus.name()=='BILLSENT'}">
+                    <a th:href="@{'/reservation/cancel/'+${request.id}}"
                        th:text="#{message.cancel}"
                        class="btn btn-danger float-right">cancel</a>
                     <a onclick="showPaymentMessage(true)" class="btn login_btn float-right"
-                       th:text="#{message.pay}+': $'+${request.price}">pay</a>
+                       th:text="#{message.pay}+': $'+${request.id}">pay</a>
                 </div>
                 <div class="card-footer">
 
@@ -98,8 +98,11 @@
                     </div>
                 </div>
             </div>
-            <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-            <script th:src="@{../../resources/js/hotel.js}"></script>
+        </div>
+    </div>
+</div>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script th:src="@{/js/hotel.js}"></script>
 </body>
 </html>
