--- a/src/main/resources/templates/approvedrequests.html
+++ b/src/main/resources/templates/approvedrequests.html
@@ -48,7 +48,7 @@
                             <td th:text="#{'message.class.'+${request.classID}}"></td>
                             <td th:text="${request.checkIn}"></td>
                             <td th:text="${request.checkOut}"></td>
-                            <td th:text="#{'message.status.'+${request.paymentStatus}}"></td>
+                            <td th:text="#{'message.status.'+${request.status}}"></td>
                             <td th:text="${request.roomNumber}"></td>
                             <td th:text="${request.firstName}"></td>
                             <td th:text="${request.lastName}"></td>
