--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,10 +53,10 @@
                                        th:href="@{'/request/view/'+${request.id}}"
                                        class="btn btn-info float-left">view</a>
                                 </td>
-                                <td th:text="#{'message.status.'+${request.reservation.paymentStatus}}"></td>
+                                <td th:text="#{'message.status.'+${request.reservation.status}}"></td>
                                 <td>
-                                    <a th:href="@{'/reservation/cancel/'+${request.id}}"
-                                       th:text="#{message.cancel}"
+                                    <a th:href="@{'/request/delete/'+${request.id}}"
+                                       th:text="#{message.delete}"
                                        class="btn btn-danger float-left">cancel</a>
                                 </td>
                             </tr>
