--- a/src/main/resources/templates/view-request.html
+++ b/src/main/resources/templates/view-request.html
@@ -70,11 +70,11 @@
                         <td th:text="${request.reservation.room.number}"></td>
                         <td th:text="#{'message.capacity.'+${request.reservation.room.capacity}}"></td>
                         <td th:text="#{'message.class.'+${request.reservation.room.classID}}"></td>
-                        <td th:text="#{'message.status.'+${request.reservation.paymentStatus}}"></td>
+                        <td th:text="#{'message.status.'+${request.reservation.status}}"></td>
                     </tr>
                     </tbody>
                 </table>
-                <div class="reserv-buttons" th:if="${request.reservation.paymentStatus.name()=='BILLSENT'}">
+                <div class="reserv-buttons" th:if="${request.reservation.status.name()=='BILLSENT'}">
                     <a th:href="@{'/reservation/cancel/'+${request.id}}"
                        th:text="#{message.cancel}"
                        class="btn btn-danger float-right">cancel</a>
