--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -25,8 +25,8 @@
                 <a th:href="@{/approvedrequests}" th:text="#{message.admin-page.approved}" class="btn btn-grey center-align">Approved requests</a>
             </div>
             <div class="card-body">
-                <p class="white" th:if="${pagedList.isEmpty()==true}" th:text="#{message.admin-page.no-request}">There are no active requests</p>
-                <table th:if="${pagedList.isEmpty()==false}" class="table table-bordered white">
+                <p class="white" th:if="${pagedList.hasContent()==false}" th:text="#{message.admin-page.no-request}">There are no active requests</p>
+                <table th:if="${pagedList.hasContent()}" class="table table-bordered white">
                     <thead>
                     <tr>
                         <th scope="col">#</th>
@@ -45,8 +45,8 @@
                             <th th:text="${request.requestID}" scope="row">1</th>
                             <td th:text="#{'message.capacity.'+${request.capacity}}"></td>
                             <td th:text="#{'message.class.'+${request.classID}}"></td>
-                            <td th:text="${request.checkIn}"></td>
-                            <td th:text="${request.checkOut}"></td>
+                            <td th:text="${#dates.format(request.checkIn,'MM/dd/yyyy')}"></td>
+                            <td th:text="${#dates.format(request.checkOut,'MM/dd/yyyy')}"></td>
                             <td th:text="#{'message.status.'+${request.status}}"></td>
                             <td>
                                 <a th:href="@{'/getallrooms/'+${request.requestID}}" th:text="#{message.find}"
@@ -60,11 +60,29 @@
                     </th:block>
                     </tbody>
                 </table>
-                <div th:if="${pageNumbers.size() > 1}" class="pagination">
-                    <a th:each="pageNumber : ${pageNumbers}"
-                       th:href="@{'/admin?page='+${pageNumber}}"
-                       class="btn btn-grey-small" th:text="${pageNumber}">Number</a>
-                </div>
+                <nav th:if="${pagedList.totalPages > 0}">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item" th:classappend="${pagedList.isFirst()} ? disabled">
+                            <a class="page-link"
+                               th:href="@{/admin(page=${pagedList.number})}"
+                               tabindex="-1"><
+                            </a>
+                        </li>
+                        <li th:each="pageNumber : ${pageNumbers}" class="page-item"
+                            th:classappend="${pageNumber==pagedList.number + 1} ? disabled">
+                            <a class="page-link"
+                               th:href="@{/admin(page=${pageNumber})}"
+                               th:text="${pageNumber}">
+                            </a>
+                        </li>
+                        <li class="page-item" th:classappend="${pagedList.isLast()} ? disabled">
+                            <a class="page-link"
+                               th:href="@{/admin(page=${pagedList.number}+2)}"
+                            >>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
             <div class="card-footer">
                 <a th:href="@{/index}" th:text="#{message.admin-page.user}" class="btn btn-info float-left">User menu</a>
