--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -57,16 +57,18 @@
                                 <a onclick="showDenyPopup(true)" class="btn login_btn float-right"
                                    th:text="#{message.deny}">deny</a>
                                 <div th:with="denyMessage = ${request.denyMessage}">
-                                    <form th:action="@{/admin/deny}" th:object="${denyMessage}" method="post">
-                                        <div  class="form-group">
-                                            <input th:field="*{message}" type="text">
+                                    <form method="post" th:action="@{/admin/deny}" th:object="${denyMessage}">
+                                        <div class="form-group">
+                                            <input id="message" name="message" th:value="${request.denyMessage.message}" type="text">
                                             <button type="submit" class="btn btn-primary btn-block"
                                                     th:text="#{message.deny}"> Deny
                                             </button>
                                             <a onclick="showDenyPopup(false)" class="btn login_btn float-right"
                                                th:text="#{message.cancel}">Cancel</a>
                                         </div>
-                                        <input hidden name="request" id="request" th:value="${request.denyMessage.message}"/>
+                                        <input hidden name="request" id="request"
+                                               th:value="${request}"/>
+
                                     </form>
                                 </div>
 
